--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'com.google.gms.google-services'
 }
 
+
 android {
     namespace 'fr.isen.francoisyatta.projectv2'
     compileSdk 33
@@ -50,14 +51,19 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.firebase:firebase-database-ktx:20.2.0'
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
 
 
 
     implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     testImplementation 'junit:junit:4.13.2'
@@ -70,6 +76,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:8.0.2'
     /*imageview dependencies*/
     implementation 'com.squareup.picasso:picasso:2.71828'
+
 
     /*Fire dependencies*/
     implementation 'com.google.firebase:firebase-database:20.1.0'
