--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,10 +57,16 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.github.furkanaskin:ClickablePieChart:1.0.9'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    // For Card view
     implementation 'androidx.cardview:cardview:1.0.0'
 
-
-
+// Chart and graph library
+    implementation 'com.github.blackfizz:eazegraph:1.2.5l@aar'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
@@ -72,10 +78,18 @@ dependencies {
     /*Fire dependencies*/
     implementation 'com.google.firebase:firebase-auth:21.1.0'
     implementation "com.google.android.gms:play-services-gcm:17.0.0"
+    implementation 'com.android.support:cardview-v7:26.1.0'
     implementation'com.google.firebase:firebase-database-ktx:20.1.0'
     implementation 'com.firebaseui:firebase-ui-database:8.0.2'
     /*imageview dependencies*/
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 
 
     /*Fire dependencies*/
